--- a/index.css
+++ b/index.css
@@ -99,3 +99,60 @@ body{
 .topic-item:hover{
     background-color: #ec49e4;
 }
+#sort_by{
+    border-color: #bd1eb5;
+    padding: 5px;
+    margin-left: 10px;
+    margin-right: 10px;
+    background-color: #f0d5ee;
+}
+#sort_by:hover{
+    background-color: #f18aec;
+}
+#sort-by-label{
+    margin-left: 30px;
+    color: #555;
+}
+#order-button{
+    background-color: #f0d5ee;
+    color: #555;
+    border-color: #bd1eb5;
+
+}
+#order-button:hover{
+    background-color: #f18aec;
+}
+#limit{
+    border-color: #bd1eb5;
+    padding: 5px;
+    margin-left: 10px;
+    margin-right: 10px;
+    background-color: #f0d5ee;
+}
+#limit-label{
+    margin-left: 30px;
+    color: #555;
+}
+#next-button{
+    background-color: #f0d5ee;
+    color: #353535;
+    border-color: #bd1eb5;
+    margin-left: 30px;
+    padding: 5px 25px;
+}
+#next-button:hover{
+    background-color: #f18aec;
+}
+
+#prev-button{
+    background-color: #f0d5ee;
+    color: #353535;
+    border-color: #bd1eb5;
+    margin-left: 555px;
+    padding: 5px 25px;
+}
+#page-num{
+    font-size: 35px;
+    text-align: center;
+    color: #72176d;
+}
