--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@ body{
     margin-bottom: 20px;
 }
 .navigation{
-    width: 60%;
+    width: 400px;
     margin: 10px;
     list-style-type: none;
     background-color: #ff49f6;
@@ -182,4 +182,11 @@ body{
 
 #user-list{
     text-decoration: none;
+}
+
+#error{
+    text-align: center;
+    font-size: 24px;
+    color: red;
+    background-color: #f0d5ee;
 }
