--- a/index.css
+++ b/index.css
@@ -9,7 +9,7 @@
     text-decoration: none;
 }
 body{
-    margin-left: 20px;
+    margin-left: 0px;
     margin-right: 20px;
     margin-bottom: 20px;
     background-color: #f0d5ee;
@@ -19,6 +19,7 @@ body{
     background-color: #ff49f6;
     display: flex; 
     justify-content: center;
+    margin-left: 20px;
 }
 .nav-item{
     text-align: center;
@@ -39,10 +40,10 @@ body{
     width: auto;
     margin-bottom: 40px;
     margin-top: 0px;
-
 }
 .article-list{
     list-style-type: none; 
+    padding-left: 20px;
 }
 .article-item{
     background-color: #ffbcfb;
@@ -163,7 +164,7 @@ body{
     border-color: #bd1eb5;
     left:0;
     position: absolute;
-    margin-left: 50px;
+    margin-left: 20px;
     padding: 5px 25px;
 }
 #prev-button:hover{
@@ -236,10 +237,8 @@ body{
     text-decoration: none;
 }
 .home-button:hover{
-    background-color: #f18aec;
-    
+    background-color: #f18aec; 
 }
-
 #login-button{
     background-color: #ffd5fc;
     color: #353535;
