--- a/index.css
+++ b/index.css
@@ -10,24 +10,30 @@
 }
 body{
     margin-left: 0px;
-    margin-right: 20px;
+    margin-right: 0px;
     margin-bottom: 20px;
     background-color: #f0d5ee;
 }
-.navigation{
+.header-nav{
     list-style-type: none;
     background-color: #ff49f6;
+    padding: 0px 10px;
     display: flex; 
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+}
+.navigation{
+    display: flex;
     justify-content: center;
-    margin-left: 20px;
+    align-items: center;
 }
 .nav-item{
-    text-align: center;
     font-weight: bold;
-    padding: 15px;
-    border-right: 1px solid #555;
+    padding: 0px 15px;
     color: rgb(63, 59, 63);
     text-decoration: none;
+    margin-right: 10px;
 }
 .nav-item:hover {
     background-color: #f0afec;
@@ -44,13 +50,23 @@ body{
 .article-list{
     list-style-type: none; 
     padding-left: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 .article-item{
-    background-color: #ffbcfb;
     list-style-type: none; 
-    padding-left: 20px;
+    padding: 20px;
+    width: 350px;
+    height: auto;
+    margin: 20px;
+    text-align: center;
+    box-shadow: 3px 10px 20px 5px rgba(0, 0, 0, 0.5);
+    background-color: #ffbcfb;
 }
-
+.article-list :hover:not(img):not(.article-author){
+    transform: scale(1.1);  
+}
 .comment-list{
     list-style-type: none; 
     padding-left: 30px;
@@ -101,7 +117,7 @@ body{
     text-align: center;
     margin: 20px;
     background-color: #ffd5fc;
-    font-size: x-large;   
+    font-size: x-large;  
 }
 #topic-name{
     text-decoration: none;
@@ -128,7 +144,6 @@ body{
     background-color: #f0d5ee;
     color: #555;
     border-color: #bd1eb5;
-
 }
 #order-button:hover{
     background-color: #f18aec;
@@ -199,10 +214,22 @@ body{
     height: 60px;
     margin-top: 25px;
 }
-
+.user-list{
+    list-style-type: none; 
+    padding-left: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;  
+}
 #user-item{
     list-style-type: none;
     text-align: center;
+    padding: 20px;
+    width: 250px;
+    height: auto;
+    margin: 20px;
+    box-shadow: 3px 10px 20px 5px rgba(0, 0, 0, 0.5);
+    background-color: #ffbcfb;
 }
 #user-username{
     color: #72176d;
@@ -270,6 +297,7 @@ body{
     display: flex;
     align-items: center;
     margin-bottom: 30px;
+    margin-left: 25px;
 }
 #vote-num{
     margin-right: 10px;
@@ -300,12 +328,14 @@ body{
 }
 #comments-label{
     color: #680363;
+    margin-left: 25px;
 }
 #add-comment{
     background-color: #ffd5fc;
     color: #353535;
     border-color: #bd1eb5;
     padding: 3px 15px;
+    margin-left: 25px;
 }
 #add-comment:hover{
     transform: scale(1.1);
@@ -342,3 +372,53 @@ body{
 #all-articles-topic:hover{
     text-decoration: underline; 
 }
+#single-article{
+    list-style-type: none; 
+    padding: 20px;
+    width: 90%;
+    height: auto;
+    margin: 20px;
+    text-align: center;
+    box-shadow: 3px 10px 20px 5px rgba(0, 0, 0, 0.5);
+    background-color: #ffbcfb;
+}
+#single-article-img{
+    width: 80%;
+    height: auto;
+}
+#username-label{
+    margin-left: 25px;
+}
+#comment-label{
+    margin-left: 25px;
+}
+
+.navigation img {
+    width: auto;
+    height: 30px;
+    border-radius: 40%;
+    margin-left: 10px; 
+    margin-right: 10px; 
+  }
+
+  @media (max-width: 450px) {
+    .header-nav {
+      flex-direction: column;
+      align-items: stretch;
+    }
+  
+    .navigation {
+      flex-direction: column;
+      align-items: center;
+    }
+  
+    .nav-item {
+      margin: 0;
+      margin-bottom: 10px;
+    }
+  
+    .navigation img {
+      margin: 0;
+      margin-top: 10px;
+    }
+  }
